...
        )}

        {/* Search Bar */}
        <Input className="rounded-full bg-gray-100 border-0">
          <InputField
            testID={automationLocatorsDataState.homeScreen.searchInput}
            placeholder="Search Messenger"
            value={searchQuery}
            onChangeText={setSearchQuery}
            className="text-gray-700 px-4"
            placeholderTextColor="#9CA3AF"
          />
          { searchQuery != ''?           
              <Button testID={automationLocatorsDataState.homeScreen.cancelSearchButton} variant="solid" size="sm" action="primary" 
                onPress={() => {
                  setSearchQuery('');
                }}>
                <ButtonText>Cancel</ButtonText>
              </Button> : <></>}

        </Input>
      </Box>

      {/* Users Horizontal Scroll */}
...
