appId: "com.phuocng23000.sdchat"
---
- runFlow: 
    when:
      platform: "ios"
    commands:
        - launchApp
        - assertVisible: "Downloading.*"
        - extendedWaitUntil: 
            visible: "Authentication.*"
            timeout: 50000
        - assertVisible: "Email"
        - assertVisible: "Password"
        - tapOn: 
            point: '50%, 40%'
        - inputText: ${MAESTRO_EMAIL}
        - tapOn: 
            point: '50%, 50%'
        - inputText: ${MAESTRO_PASSWORD}
        - tapOn: "Login"
        - assertVisible: "Chat.*"
