appId: "com.phuocng23000.sdchat"
---
- runFlow: 
    when:
      platform: "android"
    commands:
      - launchApp
      - assertVisible: "Downloading.*"
      - extendedWaitUntil: 
          visible: "Authentication.*"
          timeout: 30000
      - assertVisible: "Email"
      - assertVisible: "Password"
      - tapOn: 
          point: '50%, 40%'
      - inputText: ${MAESTRO_EMAIL}
      - tapOn: 
          point: '50%, 46%'
      - inputText: ${MAESTRO_PASSWORD}
      - tapOn: "Login"
      - assertVisible: "Chat.*"
      - assertVisible: { id: "search-input" }
