appId: com.phuocng23000.sdchat
---

- assertVisible: "Search Messenger"
- tapOn: "Search Messenger"
- inputText: "iphone"
- assertVisible: "Cancel"
- assertVisible: ".*Iphone.*"
- tapOn: "Cancel"
